--- a/css/common.css
+++ b/css/common.css
@@ -16,17 +16,30 @@ li {
   list-style-type: none;
 }
 h2 {
-  padding: 0;
+  padding-left: 8px;
   margin: 0 auto;
+}
+input {
+  padding: 0;
+}
+input:hover {
+border-color: #000000;
+}
+button {
+  border-radius: 8px;
+  color: white;
+  border: 1px solid #808080;
+  cursor: pointer;
 }
 
 .item {
   display: block;
   justify-content: center;
-  padding: 0;
+  padding: 16px;
 background-color: #f6f6fe;
 width: 392px;
 margin-bottom: 24px;
+color: #2e2f42;
 }
 
 .item>ul {
@@ -36,11 +49,11 @@ margin-bottom: 24px;
 .item>ul>li {
   display: flex;
   justify-content: start;
-border: 2px solid rgb(186, 185, 185);
+border: 2px solid #808080;
+border-radius: 4px;
   gap: 20px;
-  padding: 0;
+  padding-left: 16px;
   margin: 8px;
-
 }
 
 .gallery {
@@ -55,3 +68,99 @@ border: 2px solid rgb(186, 185, 185);
 width: calc((100% - 48px) / 3);
 }
 
+input {
+width: 360px;
+height: 40px;
+border-radius: 4px;
+border-color: #808080;
+margin-bottom: 8px;
+padding-left: 16px;
+}
+
+.login-form>label {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-form>button {
+    padding: 8px 16px;
+    width: 86px;
+    height: 40px;
+    background: #4e75ff;
+}
+.login-form>button:hover {
+  background-color: #6c8cff;
+}
+
+
+.widget {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  text-align: center;
+}
+.change-color {
+    padding: 8px 16px;
+    width: 148px;
+    height: 40px;
+    background: #4e75ff;
+    margin: 0 auto;
+}
+.change-color:hover {
+  background-color: #6c8cff;
+}
+
+#controls {
+  margin-bottom: 16px;
+  background-color: #f6f6fe;
+  padding: 32px;
+
+}
+
+#controls>input {
+  padding: 8px;
+    border-radius: 8px;
+    width: 150px;
+    height: 40px;
+    margin-right: 16px;
+    outline: none;
+text-align: center;
+}
+
+#boxes {
+  padding: 32px;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+background-color: #f6f6fe;
+}
+
+button[data-create] {
+    padding: 8px 16px;
+    width: 120px;
+    height: 40px;
+    background-color: #4e75ff;
+    margin-right: 16px;
+}
+button[data-create]:hover {
+  background-color: #6c8cff;
+}
+button[data-destroy] {
+  padding: 8px 16px;
+  width: 120px;
+  height: 40px;
+  background-color: #ff4e4e;
+}
+
+button[data-destroy]:hover {
+  background-color: #ff7070;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+  padding: 0;
+}
